docs/api/qiskit/0.39/qiskit.algorithms.state_fidelities.BaseStateFidelity.md
---
title: BaseStateFidelity
description: API reference for qiskit.algorithms.state_fidelities.BaseStateFidelity
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.state_fidelities.BaseStateFidelity
---

# BaseStateFidelity

<span id="qiskit.algorithms.state_fidelities.BaseStateFidelity" />

`BaseStateFidelity`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/algorithms/state_fidelities/base_state_fidelity.py "view source code")

Bases: `abc.ABC`

An interface to calculate state fidelities (state overlaps) for pairs of (parametrized) quantum circuits. The calculation depends on the particular fidelity method implementation, but can be always defined as the state overlap:

$$
\vert \langle\psi(x)\vert \phi(y)\rangle\vert ^2
$$

where $x$ and $y$ are optional parametrizations of the states $\psi$ and $\phi$ prepared by the circuits `circuit_1` and `circuit_2`, respectively.

## Methods

### create\_fidelity\_circuit

<span id="qiskit.algorithms.state_fidelities.BaseStateFidelity.create_fidelity_circuit" />

`abstract BaseStateFidelity.create_fidelity_circuit(circuit_1, circuit_2)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/algorithms/state_fidelities/base_state_fidelity.py "view source code")

Implementation-dependent method to create a fidelity circuit from 2 circuit inputs.

**Parameters**

*   **circuit\_1** ([`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")) – (Parametrized) quantum circuit.
*   **circuit\_2** ([`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")) – (Parametrized) quantum circuit.

**Return type**

[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")

**Returns**

The fidelity quantum circuit corresponding to `circuit_1` and `circuit_2`.

### run

<span id="qiskit.algorithms.state_fidelities.BaseStateFidelity.run" />

`BaseStateFidelity.run(circuits_1, circuits_2, values_1=None, values_2=None, **options)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/algorithms/state_fidelities/base_state_fidelity.py "view source code")

Runs asynchronously the state overlap (fidelity) calculation between two (parametrized) circuits (first and second) for a specific set of parameter values (first and second). This calculation depends on the particular fidelity method implementation.

**Parameters**

*   **circuits\_1** – (Parametrized) quantum circuits preparing $\vert \psi\rangle$.
*   **circuits\_2** – (Parametrized) quantum circuits preparing $\vert \phi\rangle$.
*   **values\_1** – Numerical parameters to be bound to the first set of circuits.
*   **values\_2** – Numerical parameters to be bound to the second set of circuits.
*   **options** – Primitive backend runtime options used for circuit execution. The order of priority is: options in `run` method > fidelity’s default options > primitive’s default setting. Higher priority setting overrides lower priority setting.

**Returns**

Primitive job for the fidelity calculation. The job’s result is an instance of `StateFidelityResult`.

